new file:   backupgallery.html 	new file:   gallery.css 	modified:   gallery.html 	modified:   index.html 	new file:   media/Dahican3.webp 	new file:   media/apo3.jpg 	new file:   media/apo4.png 	new file:   media/apo5.jpg 	new file:   media/apo6.jpg 	new file:   media/apo7.jpg 	new file:   media/apo8.jpg 	new file:   media/dahican3.jpg 	new file:   media/dahican5.jpeg 	new file:   media/dahican6.jpg 	new file:   media/palawan3.jpg 	new file:   media/palawan4.jpg 	new file:   media/palawan5.jpg 	new file:   media/palawan6.jpg 	new file:   media/palawan7.jpg 	new file:   media/palawan8.jpg 	modified:   post2.html 	modified:   post4.html 	modified:   post5.html 	modified:   post6.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post4.html">See Full Blog</a>
               <div class="image4"></div>
               <div class="post-card__details">
-                <h2><a href="post4.html">Baguio City </a></h2>
+                <h2><a href="post4.html">Baguio City, Tam-Awan </a></h2>
                 <p>Explore the Summer Capital of the Philippines, With its cool climate and lush pine forests, Baguio City is a great place to relax and experience the best of nature. Discover the many attractions, from tourist destinations to mossy plants and orchids, that make Baguio City the perfect destination for your next vacation! </p><a class="post-card__avatar" href="post4.html">
                   <div class>
                     <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
@@ -100,7 +100,7 @@
             <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post5.html">See Full Blog</a>
               <div class="image5"></div>
               <div class="post-card__details">
-                <h2><a href="post5.html">Tayo Na! Sa Antipolo </a></h2>
+                <h2><a href="post5.html">Tayo Na! Sa Antipolo -Hinulugang Taktak </a></h2>
                 <p>Antipolo is frequently referred to as the "Pilgrimage Capital of the Philippines" due to its extensive religious history and popularity as a destination for pilgrims. You may enjoy many of the tourist attractions it has to offer, including waterfalls, enormous mountains, caves, rivers, resorts, restobars, and cafeterias. </p><a class="post-card__avatar" href="post5.html">
                   <div class>
                     <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
@@ -113,7 +113,7 @@
             <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post6.html">See Full Blog</a>
               <div class="image6"></div>
               <div class="post-card__details">
-                <h2><a href="post6.html">Province of Iloilo </a></h2>
+                <h2><a href="post6.html">Province of Iloilo, Garin Farm </a></h2>
                 <p>It is known as the "Heart of the Philippines" because of its people's sweet, giving, and loving nature. You'll fall in love with the stunning tourist destinations across Iloilo, which is also known as the "City of Love" and is known for its historic Hispanic structures that is mixed with a sense of the past along with the present."  </p><a class="post-card__avatar" href="post6.html">
                   <div class>
                     <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
