--- a/post2.html
+++ b/post2.html
@@ -24,10 +24,10 @@
         <menu><a href="https://maps.google.com.ph/"> Travel</a><a href="gallery.html"> Gallery</a><a href="About.html"> About</a><a href="https://jhenchem0210.github.io/ContriMP2/index.html"> Join Us</a><a href="blog.html"> Log In</a>
         </menu>
       </section>
-      <section id="post-featured-image">
-        <div class="post__featured-image1">
+      <section id="post-featured-image2">
+        <div class="post__featured-image2">
           <div class="post__title-container">
-            <h2>Who would you not love to visit Baguio?</h2>
+            <h2>Who would you not love to visit Apo National Park?</h2>
             <p>SEPTEMBER 11, 2022  -— Views: 100</p>
             <div class="post__avatar-container">
               <div class="post__avatar"><img src="profile.jpg" height="50" width="50" class="rounded-circle">
@@ -42,13 +42,13 @@
       </section>
       <section id="blog-featured">
         <div class="post_featured">
-          <div class="post_featured__photo"></div>
+          <div class="post_featured__photo2"></div>
           <div class="post_featured__details">
             <h2 class="featured-details__title"><a href="#">Lorem ipsum dolor sit amet, consectetur, adipiscing </a></h2><a class="post-card__avatar" href="#">
               <div class="avatar__muted-line"></div>
               <div class="avatar__white-bg">
                 <div class="white-bg-container"><img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
-                  <div class="avatar__name">by Jennifer Pajalla-Bravo</div>
+                  <div class="avatar__name">by Yza Grace Delima</div>
                 </div>
               </div></a>
             <p class="featured-details__desc">
@@ -71,9 +71,9 @@
           <h2>Why do we travel here?</h2>
           <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
           <div class="post__media_container">
-            <div class="post__media_photo1"></div>
+            <div class="post__media_photo2"></div>
             <div class="post__media_caption">
-              <p>Baguio Cathedral</p>
+              <p>Mt. Apo National Park</p>
             </div>
           </div>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It </p>
@@ -83,11 +83,11 @@
         <div class="post__tags">
           <h6>TAGS</h6>
           <ul>
-            <li><a href="#">BAGUIO,</a></li>
-            <li><a href="#">BAGUIOCITYESCAPE,</a></li>
-            <li><a href="#">BURNHAM PARK,</a></li>
-            <li><a href="#">SESSION ROAD,</a></li>
-            <li><a href="#">TAM-AWAN,</a></li>
+            <li><a href="#">MOUNT APO,</a></li>
+            <li><a href="#">DAVAOCITYESCAPE,</a></li>
+            <li><a href="#">MT. APO NATIONAL PARK,</a></li>
+            <li><a href="#">MT. APO HIKING,</a></li>
+            <li><a href="#">DAVAO,</a></li>
             <li><a href="#">REVIEW,</a></li>
             <li><a href="#">TRAVEL-REVIEW</a></li>
           </ul>
@@ -152,6 +152,36 @@
         </div>
       </div>
     </footer>
+    <!-- Messenger Chat Plugin Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your Chat Plugin code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
+
+    <script>
+      var chatbox = document.getElementById('fb-customer-chat');
+      chatbox.setAttribute("page_id", "113729608279165");
+      chatbox.setAttribute("attribution", "biz_inbox");
+    </script>
+
+    <!-- Your SDK code -->
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          xfbml            : true,
+          version          : 'v15.0'
+        });
+      };
+
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="script.min.js"></script>
