--- a/post6.html
+++ b/post6.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="mystyle.css">
     <!-- title tag-->
-    <title>Hello, Baguio!</title>
+    <title>Hello, Iloilo!</title>
   </head>
   <body id="post__single-page">
     <div class="container_wrapper">
@@ -27,14 +27,14 @@
       <section id="post-featured-image">
         <div class="post__featured-image1">
           <div class="post__title-container">
-            <h2>Who would you not love to visit Baguio?</h2>
+            <h2>Who would you not love to visit Iloilo?</h2>
             <p>SEPTEMBER 11, 2022  -— Views: 100</p>
             <div class="post__avatar-container">
-              <div class="post__avatar"><img src="profile.jpg" height="50" width="50" class="rounded-circle">
+              <div class="post__avatar"><img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
               </div>
               <div class="post__avatar-name">
                 <h5>Written by</h5>
-                <p>Yza Grace Delima</p>
+                <p>Jennifer Pajalla-Bravo</p>
               </div>
             </div>
           </div>
@@ -42,7 +42,7 @@
       </section>
       <section id="blog-featured">
         <div class="post_featured">
-          <div class="post_featured__photo"></div>
+          <div class="post_featured__photo6"></div>
           <div class="post_featured__details">
             <h2 class="featured-details__title"><a href="#">Lorem ipsum dolor sit amet, consectetur, adipiscing </a></h2><a class="post-card__avatar" href="#">
               <div class="avatar__muted-line"></div>
@@ -71,9 +71,9 @@
           <h2>Why do we travel here?</h2>
           <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
           <div class="post__media_container">
-            <div class="post__media_photo1"></div>
+            <div class="post__media_photo6"></div>
             <div class="post__media_caption">
-              <p>Baguio Cathedral</p>
+              <p>Iloilo City</p>
             </div>
           </div>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It </p>
@@ -83,11 +83,11 @@
         <div class="post__tags">
           <h6>TAGS</h6>
           <ul>
-            <li><a href="#">BAGUIO,</a></li>
-            <li><a href="#">BAGUIOCITYESCAPE,</a></li>
-            <li><a href="#">BURNHAM PARK,</a></li>
-            <li><a href="#">SESSION ROAD,</a></li>
-            <li><a href="#">TAM-AWAN,</a></li>
+            <li><a href="#">ILOILO,</a></li>
+            <li><a href="#">ILOILOCITYESCAPE,</a></li>
+            <li><a href="#">GARIN FARM,</a></li>
+            <li><a href="#">ILOILO CITY ESPLANADE,</a></li>
+            <li><a href="#">GIGANTES ISLAND,</a></li>
             <li><a href="#">REVIEW,</a></li>
             <li><a href="#">TRAVEL-REVIEW</a></li>
           </ul>
@@ -97,7 +97,7 @@
         <div class="author-bio__container">
           <div class="author-bio__avatar"><img src="profile.jpg" height="70" width="70" class="rounded-circle"></div>
           <div class="author-bio__description">
-            <h2>Yza Grace Delima</h2>
+            <h2>Jennifer Pajalla-Bravo</h2>
             <p>An aspiring chemist and front-end developer. Co-Founder of GoPilipinasAdventurista which build a community where everyone's experience can make a difference. Join us now.</p>
           </div>
           <div class="author-bio__social-media">
@@ -152,6 +152,36 @@
         </div>
       </div>
     </footer>
+    <!-- Messenger Chat Plugin Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your Chat Plugin code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
+
+    <script>
+      var chatbox = document.getElementById('fb-customer-chat');
+      chatbox.setAttribute("page_id", "113729608279165");
+      chatbox.setAttribute("attribution", "biz_inbox");
+    </script>
+
+    <!-- Your SDK code -->
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          xfbml            : true,
+          version          : 'v15.0'
+        });
+      };
+
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="script.min.js"></script>
