--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,7 @@
                                 <img src="/media/palawan.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item active">
-                                <img src="/images/antipolo6.jpg" class=" d-block w-100" alt="...">
+                                <img src="/images/antipolo2.png" class=" d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
                                 <img src="/images/baguio1.jpg" class="d-block w-100" alt="...">
