modified:   gallery.html 	modified:   mystyle.css

--- a/gallery.html
+++ b/gallery.html
@@ -268,7 +268,7 @@
                                 <span class="visually-hidden">Next</span>
                             </button>
                         </div>
-                        <h5 class="card-title">Tayo Na! Sa Antipolo -Hinulugang Taktak</h5><br>
+                        <h5 class="card-title">Tayo Na! Sa Antipolo </h5><br>
                         <a href="post5.html" class="btn btn-primary">Read</a>
                       </div>
                     </div>
