modified:   gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -31,22 +31,22 @@
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="/media/dahican.png" class=" d-block w-100" alt="...">
+                                <img src="/media/dahican.png" class=" d-block w-100 img-fluid" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="/media/apo2.jpg" class="d-block w-100" alt="...">
+                                <img src="/media/apo2.jpg" class="d-block w-100 img-fluid" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="/media/palawan.jpg" class="d-block w-100" alt="...">
+                                <img src="/media/palawan.jpg" class="d-block w-100 img-fluid" alt="...">
                             </div>
                             <div class="carousel-item active">
-                                <img src="/images/antipolo2.png" class=" d-block w-100" alt="...">
+                                <img src="/images/antipolo2.png" class=" d-block w-100 img-fluid" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="/images/baguio1.jpg" class="d-block w-100" alt="...">
+                                <img src="/images/baguio1.jpg" class="d-block w-100 img-fluid" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="/images/iloilo1.jpg" class="d-block w-100" alt="...">
+                                <img src="/images/iloilo1.jpg" class="d-block w-100 img-fluid" alt="...">
                             </div>        
                         </div>
                     
