--- a/gallery.html
+++ b/gallery.html
@@ -28,36 +28,37 @@
         <div class="container mt-5">
             <div class="row">
                 <div class="col-8">
-                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
+                            <div class="carousel-item active" style="height: 420px;">
                                 <img src="/media/dahican.png" class=" d-block w-100 img-fluid" alt="...">
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item" style="height: 420px;">
                                 <img src="/media/apo2.jpg" class="d-block w-100 img-fluid" alt="...">
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item" style="height: 420px;">
                                 <img src="/media/palawan.jpg" class="d-block w-100 img-fluid" alt="...">
                             </div>
-                            <div class="carousel-item active">
+                            <div class="carousel-item" style="height: 420px;">
                                 <img src="/images/antipolo2.png" class=" d-block w-100 img-fluid" alt="...">
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item" style="height: 420px;">
                                 <img src="/images/baguio1.jpg" class="d-block w-100 img-fluid" alt="...">
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item" style="height: 420px;">
                                 <img src="/images/iloilo1.jpg" class="d-block w-100 img-fluid" alt="...">
                             </div>        
                         </div>
                     
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#" data-bs-slide-to="0" class="active"></button>
+                            <button type="button" data-bs-target="#" data-bs-slide-to="1" ></button>
+                            <button type="button" data-bs-target="#" data-bs-slide-to="2" ></button>
+                            <button type="button" data-bs-target="#" data-bs-slide-to="3" ></button>
+                            <button type="button" data-bs-target="#" data-bs-slide-to="4" ></button>
+                            <button type="button" data-bs-target="#" data-bs-slide-to="5" ></button>
+                        </div>
+
                     </div><br>  
                 </div>
                 <div class="col-3">
@@ -83,7 +84,7 @@
                                 <div class="carousel-item">
                                     <img src="media/dahican6.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item active">
+                                <div class="carousel-item">
                                     <img src="media/Dahican3.webp" class=" d-block w-100" alt="...">
                                 </div>
                                 <div class="carousel-item">
@@ -125,7 +126,7 @@
                                 <div class="carousel-item">
                                     <img src="media/apo5.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item active">
+                                <div class="carousel-item">
                                     <img src="media/apo6.jpg" class=" d-block w-100" alt="...">
                                 </div>
                                 <div class="carousel-item">
@@ -167,7 +168,7 @@
                                 <div class="carousel-item">
                                     <img src="media/palawan5.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item active">
+                                <div class="carousel-item">
                                     <img src="media/palawan6.jpg" class=" d-block w-100" alt="...">
                                 </div>
                                 <div class="carousel-item">
@@ -198,23 +199,23 @@
                     <div class="card-body">
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="images/baguio2.jpg" class=" d-block w-100" alt="...">
+                                <div class="carousel-item active" style="height: 200px;">
+                                    <img src="images/baguio2.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/baguiopar.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-item" style="height: 200px;">
+                                    <img src="images/baguiopar.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/baguiohorse.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-item" style="height: 200px;">
+                                    <img src="images/baguiohorse.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
-                                <div class="carousel-item active">
-                                    <img src="images/baguiostr.jpg" class=" d-block w-100" alt="...">
+                                <div class="carousel-item" style="height: 200px;">
+                                    <img src="images/baguiostr.jpg" class=" d-block w-100 img-fluid" alt="...">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/baguiolionhead.png" class="d-block w-100" alt="...">
+                                <div class="carousel-item" style="height: 200px;">
+                                    <img src="images/baguiolionhead.png" class="d-block w-100 img-fluid" alt="...">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/baguiotam.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-item" style="height: 200px;">
+                                    <img src="images/baguiotam.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -240,23 +241,23 @@
                       <div class="card-body">
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="images/antipolo6.jpg" class=" d-block w-100" alt="...">
+                                <div class="carousel-item active" style="height: 200px;" >
+                                    <img src="images/antipolo6.jpg" class=" d-block w-100 img-fluid" alt="...">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/antipolo2.png" class="d-block w-100" alt="...">
+                                <div class="carousel-item" style="height: 200px;">
+                                    <img src="images/antipolo2.png" class="d-block w-100 img-fluid" alt="...">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/taktak.jpeg" class="d-block w-100" alt="...">
+                                <div class="carousel-item" style="height: 200px;">
+                                    <img src="images/taktak.jpeg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
-                                <div class="carousel-item active">
-                                    <img src="images/antipolo9.jpg" class=" d-block w-100" alt="...">
+                                <div class="carousel-item" style="height: 200px;">
+                                    <img src="images/antipolo9.jpg" class=" d-block w-100 img-fluid" alt="...">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/mystical2.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-item" style="height: 200px;">
+                                    <img src="images/mystical2.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/antipolo13.png" class="d-block w-100" alt="...">
+                                <div class="carousel-item" style="height: 200px;">
+                                    <img src="images/antipolo13.png" class="d-block w-100 img-fluid" alt="...">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -280,23 +281,23 @@
                       <div class="card-body">
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="images/iloilo2.jpg" class=" d-block w-100" alt="...">
+                                <div class="carousel-item active" style="height: 200px;">
+                                    <img src="images/iloilo2.jpg" class=" d-block w-100 img-fluid" alt="...">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/iloilo3.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-item" style="height: 200px;">
+                                    <img src="images/iloilo3.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/iloilo4.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-item" style="height: 200px;">
+                                    <img src="images/iloilo4.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
-                                <div class="carousel-item active">
-                                    <img src="images/Iloilo1.png" class=" d-block w-100" alt="...">
+                                <div class="carousel-item" style="height: 200px;">
+                                    <img src="images/Iloilo1.png" class=" d-block w-100 img-fluid" alt="...">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/iloilo3.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-item" style="height: 200px;">
+                                    <img src="images/iloilo3.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/iloilo2.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-item" style="height: 200px;">
+                                    <img src="images/iloilo2.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
