modified:   gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -31,22 +31,22 @@
                     <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active" style="height: 420px;">
-                                <img src="/media/dahican.png" class=" d-block w-100 img-fluid" alt="...">
+                                <img src="media/dahican.png" class=" d-block w-100 img-fluid" alt="...">
                             </div>
                             <div class="carousel-item" style="height: 420px;">
-                                <img src="/media/apo2.jpg" class="d-block w-100 img-fluid" alt="...">
+                                <img src="media/apo2.jpg" class="d-block w-100 img-fluid" alt="...">
                             </div>
                             <div class="carousel-item" style="height: 420px;">
-                                <img src="/media/palawan.jpg" class="d-block w-100 img-fluid" alt="...">
+                                <img src="media/palawan.jpg" class="d-block w-100 img-fluid" alt="...">
                             </div>
                             <div class="carousel-item" style="height: 420px;">
-                                <img src="/images/antipolo2.png" class=" d-block w-100 img-fluid" alt="...">
+                                <img src="images/antipolo2.png" class=" d-block w-100 img-fluid" alt="...">
                             </div>
                             <div class="carousel-item" style="height: 420px;">
-                                <img src="/images/baguio1.jpg" class="d-block w-100 img-fluid" alt="...">
+                                <img src="images/baguio1.jpg" class="d-block w-100 img-fluid" alt="...">
                             </div>
                             <div class="carousel-item" style="height: 420px;">
-                                <img src="/images/iloilo1.jpg" class="d-block w-100 img-fluid" alt="...">
+                                <img src="images/iloilo1.jpg" class="d-block w-100 img-fluid" alt="...">
                             </div>        
                         </div>
                     
