--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@
 
         <div class="container mt-5">
             <div class="row">
-                <div class="col-8">
+                <div class="col-lg-8 col-md-8 col-sm-12">
                     <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active" style="height: 420px;">
@@ -58,13 +58,14 @@
                             <button type="button" data-bs-target="#" data-bs-slide-to="4" ></button>
                             <button type="button" data-bs-target="#" data-bs-slide-to="5" ></button>
                         </div>
-
-                    </div><br>  
+                    </div>
                 </div>
-                <div class="col-3">
-                    <h1>Life begins at the end of your comfort zone.<br><br>The greatest adventure is what lies ahead.</h1>
+                <div class="col-lg-3 col-md-12 col-sm-12">
+                    <h1 class="mb-4 text-center">Life begins at the end of your comfort zone.<br><br>The greatest adventure is what lies ahead.</h1>
                 </div>
-            </div><br>
+            </div>
+        </div>
+    <br>
 
             <h4 class="mb-5 p-3 fs-1 text-center"><strong>Gallery</strong></h4>
             <div class="row">
